--- a/index.html
+++ b/index.html
@@ -278,5 +278,9 @@ setInterval(function(){
    
 },20)
 </script>
+<p> There are some additional functions.
+You can change the color by clicking the mouse.
+You can stop the game by pressing SPACE.
+You can control the paddle by using the mouse or the keyboard(left arrow and right arrow)</p>
 </body>
 </html>
